fixed Z-index

--- a/app/view/css/formularios.css
+++ b/app/view/css/formularios.css
@@ -6,7 +6,7 @@
 
 .card {
     border: none !important;
-    z-index: -1 !important;
+    z-index: 0 !important;
 }
 
 .card-body {
